2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* modules/applications.vfolder-info.in:
	* modules/preferences.vfolder-info.in:

	And Systems folder for XST.

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* modules/preferences.vfolder-info.in:

	Add Advanced folder.

2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* modules/applications.vfolder-info.in:

	Change where we look for capplets.
	
2002-01-27  Seth Nickell  <snickell@stanford.edu>

	* modules/preferences.vfolder-info.in:

	Change where we look for capplets.

2002-01-27  Anders Carlsson  <andersca@gnu.org>

	* libgnomevfs/gnome-vfs-xfer.c (gnome_vfs_xfer_delete_items): Call
	count_Items_and_size with move set to FALSE. Fixes #46777.
	Approved by Seth Nickell.

2002-01-22  jacob berkman  <jacob@ximian.com>

	* man/:
	* configure.in (AC_OUTPUT): 
	* Makefile.am (SUBDIRS): remove man page

2002-01-21  Alexander Larsson  <alla@lysator.liu.se>

	* modules/file-method.c (monitor_setup):
	Fix deadlock when fam connection failed twice.

2002-01-21  jacob berkman  <jacob@ximian.com>

	* modules/Makefile.am (libnntp_la_SOURCES): include nntp-method.h

2002-01-20  Seth Nickell  <snickell@stanford.edu>

	* modules/Makefile.am:
	* modules/default-modules.conf:
	* modules/nntp-method.c: (nntp_response_to_vfs_result),
	(read_response_line), (get_response), (do_control_write),
	(nntp_connection_reset_buffer), (do_basic_command),
	(nntp_connection_create), (nntp_connection_destroy), (my_str_hash),
	(my_str_equal), (nntp_connection_uri_hash),
	(nntp_connection_uri_equal), (nntp_connection_acquire),
	(nntp_connection_release), (is_number_or_space),
	(all_numbers_or_spaces), (remove_numbers_between_dashes),
	(remove_number_at_end), (trim_nonalpha_chars),
	(remove_of_expressions), (filter_folder_name), (remove_commas),
	(is_number), (parse_date_string), (parse_header),
	(nntp_fragment_new), (nntp_fragment_destroy), (map_slashes),
	(nntp_file_new), (nntp_file_destroy), (nntp_file_look_up_fragment),