@@ -1,3 +1,12 @@
+2002-01-28  Darin Adler  <darin@bentspoon.com>
+
+	* libgnomevfs/gnome-vfs-configuration.c:
+	(gnome_vfs_configuration_get_module_path): Patch from
+	Alvaro Lopez Ortega <alvaro@godsmaze.org> to fix crash
+	instead of warning when configuration is not set up.
+
+	* modules/nntp-method.c: Misc. cleanup.
+
 2002-01-27  Seth Nickell  <snickell@stanford.edu>
 
 	* modules/applications.vfolder-info.in:
